--- a/index.html
+++ b/index.html
@@ -117,7 +117,7 @@
 							<td class="year">2020</td>
 							<td class="publication">
 								<a href="https://arxiv.org/pdf/2005.04120.pdf" target="_blank">
-									<span class="text-primary">"K-EmoCon, a multimodal sensor dataset for continuous emotion recognition in naturalistic conversationss."</span></a>
+									<span class="text-primary">"K-EmoCon, a multimodal sensor dataset for continuous emotion recognition in naturalistic conversations."</span></a>
 								<span style="float:right;">
 									<a class="btn btn-outline-info btn-sm" href="https://arxiv.org/pdf/2005.04120.pdf" role="button" target="_blank">PDF</a>
 								</span>
@@ -212,6 +212,19 @@
 				<h5>REFEREED CONFERENCE PAPERS & POSTERS</h5>
 				<table class="table table-hover">
 					<tbody>
+						<tr>
+							<td class="year">2021</td>
+							<td class="publication">
+								<a href="./file/paper/ICTC20_FlowControl.pdf" target="_blank">
+									<span class="text-primary">"Sticky Goals: Understanding Goal Commitments for Behavioral Changes in the Wild"</span></a>
+								<span style="float:right;">
+												<a class="btn btn-outline-info btn-sm" href="./" role="button" target="_blank">PDF</a>
+											</span>
+								<br>
+								<em>Proceedings of the SIGCHI Conference on Human Factors in Computing Systems (CHI ’21)</em><br>
+								Hyunsoo Lee, <strong>Auk Kim +</strong>, Hwajung Hong +, Uichin Lee +.
+							</td>
+						</tr>
 						<tr>
 							<td class="year">2020</td>
 							<td class="publication">
