--- a/index.html
+++ b/index.html
@@ -115,7 +115,19 @@
 					<tbody>
 						<tr>
 							<td class="publication">
-								<a href="./file/paper/ICTC20_FlowControl.pdf" target="_blank">
+								<a href="./" target="_blank">
+									<span class="text-primary">"Benefits of Mobile Contact Tracing on COVID-19: Tracing Capacity Perspectives"</span></a>
+								<span style="float:right;">
+													<a class="btn btn-outline-info btn-sm" href="./" role="button" target="_blank">PDF</a>
+												</span>
+								<br>
+								<em>Frontiers in Public Health (Digital Public Health Section) (to appear)</em><br>
+								Uichin Lee +, <strong>Auk Kim</strong>.
+							</td>
+						</tr>
+						<tr>
+							<td class="publication">
+								<a href="./" target="_blank">
 									<span class="text-primary">"Sticky Goals: Understanding Goal Commitments for Behavioral Changes in the Wild"</span></a>
 								<span style="float:right;">
 													<a class="btn btn-outline-info btn-sm" href="./" role="button" target="_blank">PDF</a>
