--- a/index.html
+++ b/index.html
@@ -115,13 +115,13 @@
 					<tbody>
 						<tr>
 							<td class="publication">
-								<a href="./" target="_blank">
+								<a href="https://www.frontiersin.org/articles/10.3389/fpubh.2021.586615/full" target="_blank">
 									<span class="text-primary">"Benefits of Mobile Contact Tracing on COVID-19: Tracing Capacity Perspectives"</span></a>
 								<span style="float:right;">
-													<a class="btn btn-outline-info btn-sm" href="./" role="button" target="_blank">PDF</a>
+													<a class="btn btn-outline-info btn-sm" href="https://www.frontiersin.org/articles/10.3389/fpubh.2021.586615/full" role="button" target="_blank">PDF</a>
 												</span>
 								<br>
-								<em>Frontiers in Public Health (Digital Public Health Section) (to appear)</em><br>
+								<em>Frontiers in Public Health (Digital Public Health Section) (Mar 2021)</em><br>
 								Uichin Lee +, <strong>Auk Kim</strong>.
 							</td>
 						</tr>
