--- a/index.html
+++ b/index.html
@@ -23,9 +23,8 @@
 
 	gtag('config', 'UA-115020510-1');
 </script>
-<script crossorigin="anonymous"
-	integrity="sha256-3edrmyuQ0w65f8gfBsqowzjJe2iM6n0nKciPUp8y+7E="
-	src="https://code.jquery.com/jquery-3.3.1.slim.min.js"></script>
+	<script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
+
 <script src="https://unpkg.com/popper.js/dist/umd/popper.min.js"></script>
 <script
 	crossorigin="anonymous"
