--- a/index.html
+++ b/index.html
@@ -81,7 +81,7 @@
 
 						<blockquote class="blockquote text-right">
 							<p class="mb-0"></p>
-							<footer class="blockquote-footer">updated 4 Mar, 2021</footer>
+							<footer class="blockquote-footer">updated 19 Feb, 2022</footer>
 						</blockquote>
 					</div>
 				</div>
@@ -98,6 +98,26 @@
 				<p> Corresponding Author +</p>
 				<br>
 
+				<h5>2022</h5>
+				<table class="table table-hover">
+					<tbody>
+					<tr>
+						<td class="publication">
+							<a href="https://chi2022.acm.org/" target="_blank">
+								<span class="text-primary">"Understanding Emotion Changes in Mobile Experience Sampling"</span></a>
+							<span style="float:right;">
+													<a class="btn btn-outline-info btn-sm" href="./file/paper/CHI22_ESM.pdf" role="button" target="_blank">PDF</a>
+												</span>
+							<br>
+							<em>Proceedings of the SIGCHI Conference on Human Factors in Computing Systems (CHI ’22) (Accepted, will published on Apr 2022)</em><br>
+							Soowon Kang, Cheul Young Park, Narae Cha, <strong>Auk Kim +</strong>, Uichin Lee +.
+						</td>
+					</tr>
+					</tbody>
+				</table>
+
+				<br>
+
 				<h5>2021</h5>
 				<table class="table table-hover">
 					<tbody>
@@ -106,7 +126,7 @@
 								<a href="https://www.frontiersin.org/articles/10.3389/fpubh.2021.586615/full" target="_blank">
 									<span class="text-primary">"Benefits of Mobile Contact Tracing on COVID-19: Tracing Capacity Perspectives"</span></a>
 								<span style="float:right;">
-													<a class="btn btn-outline-info btn-sm" href="https://www.frontiersin.org/articles/10.3389/fpubh.2021.586615/full" role="button" target="_blank">PDF</a>
+													<a class="btn btn-outline-info btn-sm" href="./file/paper/frontiers21_covid19.pdf" role="button" target="_blank">PDF</a>
 												</span>
 								<br>
 								<em>Frontiers in Public Health (Digital Public Health Section) (Mar 2021)</em><br>
@@ -118,7 +138,7 @@
 								<a href="./" target="_blank">
 									<span class="text-primary">"Sticky Goals: Understanding Goal Commitments for Behavioral Changes in the Wild"</span></a>
 								<span style="float:right;">
-													<a class="btn btn-outline-info btn-sm" href="./" role="button" target="_blank">PDF</a>
+													<a class="btn btn-outline-info btn-sm" href="./file/paper/CHI21_commitments.pdf" role="button" target="_blank">PDF</a>
 												</span>
 								<br>
 								<em>Proceedings of the SIGCHI Conference on Human Factors in Computing Systems (CHI ’21)</em><br>
