update HCIK paper
update HCIK paper

--- a/index.html
+++ b/index.html
@@ -113,6 +113,27 @@
 					<tbody>
 					<tr>
 						<td class="publication" paper-type="conference">
+							<a href="#" target="_blank">
+								<span class="text-primary">"음성 운전 보조 에이전트 개발을 위한 디자인 요구사항 조사 (A Survey on Design for Development of Voice Driving Assistance Agent)"</span></a>
+								<span style="float:right;">
+										<a class="btn btn-outline-info btn-sm" href="#" role="button" target="_blank">PDF</a>
+									</span>
+							<br>
+							<em>PROCEEDINGS OF HCI KOREA 2022 학술대회 발표 논문집, 283-288 (HCIK 2022)</em><br>
+							김민지, 한민규, 황지우, <strong>김아욱 +</strong>.
+						</td>
+					</tr>
+					<tr>
+						<td class="publication" paper-type="conference">
+							<a href="#" target="_blank"><span class="text-primary">"저비용 조건부 자율주행 시뮬레이터 개발 및 평가 (Developing and Evaluating Low-Cost Level 3 Vehicle Simulator)"</span></a>
+							<span style="float:right;"><a class="btn btn-outline-info btn-sm" href="#" role="button" target="_blank">PDF</a></span>
+							<br>
+							<em>PROCEEDINGS OF HCI KOREA 2022 학술대회 발표 논문집, 283-288 (HCIK 2022)</em><br>
+							황지우, 한민규, 김민지, <strong>김아욱 +</strong>.
+						</td>
+					</tr>
+					<tr>
+						<td class="publication" paper-type="conference">
 							<a href="https://chi2022.acm.org/" target="_blank">
 								<span class="text-primary">"Understanding Emotion Changes in Mobile Experience Sampling"</span></a>
 							<span style="float:right;">
@@ -239,7 +260,7 @@
 						<tr>
 							<td class="publication" paper-type="conference">
 								<a href="https://www.dbpia.co.kr/journal/articleDetail?nodeId=NODE10402723" target="_blank">
-									<span class="text-primary">"경험표집법을 통해 수집한 감정 데이터 가변성에 대한 이해 (Understanding Variability of Mood Collected by Experience Sampling Method)."</span></a>
+									<span class="text-primary">"경험표집법을 통해 수집한 감정 데이터 가변성에 대한 이해 (Understanding Variability of Mood Collected by Experience Sampling Method)"</span></a>
 								<span style="float:right;">
 										<a class="btn btn-outline-info btn-sm" href="https://www.dbpia.co.kr/journal/articleDetail?nodeId=NODE10402723f" role="button" target="_blank">PDF</a>
 									</span>
