--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
 <title>AUK KIM | Personal website</title>
 <meta charset="utf-8">
 <meta content="Auk Kim | Personal Website" name="title">
-<meta content="kaist,research,phd,hci,kim auk,auk kim" name="keywords">
+<meta content="KNU,kangwon,research,phd,hci,kim auk,auk kim" name="keywords">
 <meta content="Auk Kim" name="author">
 <meta content="A personal website for Auk Kim" name="description">
 <meta content="IE=edge" http-equiv="X-UA-Compatible" />
@@ -82,7 +82,7 @@
 
 						<blockquote class="blockquote text-right">
 							<p class="mb-0"></p>
-							<footer class="blockquote-footer">updated 19 Feb, 2022</footer>
+							<footer class="blockquote-footer">updated 12 May, 2022</footer>
 						</blockquote>
 					</div>
 				</div>
@@ -134,13 +134,13 @@
 					</tr>
 					<tr>
 						<td class="publication" paper-type="conference">
-							<a href="https://chi2022.acm.org/" target="_blank">
+							<a href="https://dl.acm.org/doi/abs/10.1145/3491102.3501944" target="_blank">
 								<span class="text-primary">"Understanding Emotion Changes in Mobile Experience Sampling"</span></a>
 							<span style="float:right;">
 													<a class="btn btn-outline-info btn-sm" href="./file/paper/CHI22_ESM.pdf" role="button" target="_blank">PDF</a>
 												</span>
 							<br>
-							<em>Proceedings of the SIGCHI Conference on Human Factors in Computing Systems (CHI ’22) (to appear)</em><br>
+							<em>Proceedings of the SIGCHI Conference on Human Factors in Computing Systems (CHI ’22)</em><br>
 							Soowon Kang, Cheul Young Park, Narae Cha, <strong>Auk Kim +</strong>, Uichin Lee +.
 						</td>
 					</tr>
@@ -166,7 +166,7 @@
 						</tr>
 						<tr>
 							<td class="publication" paper-type="conference">
-								<a href="./" target="_blank">
+								<a href="https://dl.acm.org/doi/abs/10.1145/3411764.3445295" target="_blank">
 									<span class="text-primary">"Sticky Goals: Understanding Goal Commitments for Behavioral Changes in the Wild"</span></a>
 								<span style="float:right;">
 													<a class="btn btn-outline-info btn-sm" href="./file/paper/CHI21_commitments.pdf" role="button" target="_blank">PDF</a>
