--- a/index.html
+++ b/index.html
@@ -105,7 +105,114 @@
 				</nav>
 
 				<br>
-				<p> Corresponding Author +</p>
+				<p>Corresponding Author +</p>
+				<br>
+
+				<h5>2024</h5>
+				<table class="table table-hover">
+					<tbody>
+						<tr>
+							<td class="publication" paper-type="journal">
+								<a href="#" target="_blank">
+									<span class="text-primary">"Internet-of-Things-Enabled Patch with Built-in Microsensors and Wireless Chip: Real-time Remote Monitoring of Patch Treatment"</span>
+								</a>
+								<span style="float:right;">
+									<a class="btn btn-outline-info btn-sm" href="#" role="button" target="_blank">PDF</a>
+								</span>
+								<br>
+								<em>Translational Vision Science and Technology (conditionally accepted)</em><br>
+								Kyu-Seong Jo *, Jiwoo Hwang *, Min-Seo Kim, Sunghwan Choi, Jungmin Lee, Seongho Lee, <strong>Auk Kim +</strong>, Yung-Ju Yoo +. (* Equally contributed)
+							</td>
+						</tr>
+						<tr>
+							<td class="publication" paper-type="conference">
+								<a href="#" target="_blank">
+									<span class="text-primary">"Interrupting for Microlearning: Understanding Perceptions and Interruptibility of Proactive Conversational Microlearning Services"</span>
+								</a>
+								<span style="float:right;">
+									<a class="btn btn-outline-info btn-sm" href="#" role="button" target="_blank">PDF</a>
+								</span>
+								<br>
+								<em>Proceedings of the SIGCHI Conference on Human Factors in Computing Systems (CHI ’24) (conditionally accepted)</em><br>
+								Minyeong Kim *, Jiwook Lee *, Youngji Koh, Chanhee Lee, Uichin Lee +, <strong>Auk Kim +</strong>. (* Equally contributed)
+							</td>
+						</tr>	
+						<tr>
+							<td class="publication" paper-type="conference">
+								<a href="#" target="_blank">
+									<span class="text-primary">"S-ADL: Exploring Smartphone-based Activities of Daily Living to Detect Blood Alcohol Concentration in a Controlled Environment"</span>
+								</a>
+								<span style="float:right;">
+									<a class="btn btn-outline-info btn-sm" href="#" role="button" target="_blank">PDF</a>
+								</span>
+								<br>
+								<em>Proceedings of the SIGCHI Conference on Human Factors in Computing Systems (CHI ’24) (conditionally accepted)</em><br>
+								Hansoo Lee, <strong>Auk Kim +</strong>, Sang Won Bae, Uichin Lee +.
+							</td>
+						</tr>				
+						<tr>
+							<td class="publication" paper-type="conference">
+								<a href="#" target="_blank">
+									<span class="text-primary">"Exploring Context-Aware Mental Health Self-Tracking Using Multimodal Smart Speakers in Home Environments"</span>
+								</a>
+								<span style="float:right;">
+									<a class="btn btn-outline-info btn-sm" href="#" role="button" target="_blank">PDF</a>
+								</span>
+								<br>
+								<em>Proceedings of the SIGCHI Conference on Human Factors in Computing Systems (CHI ’24) (conditionally accepted)</em><br>
+								Jieun Lim *, Youngji Ko * , <strong>Auk Kim +</strong>, Uichin Lee +. (* Equally contributed)
+							</td>
+						</tr>
+					</tbody>
+				</table>
+
+				<br>
+
+				<h5>2023</h5>
+				<table class="table table-hover">
+					<tbody>					
+						<tr>
+							<td class="publication" paper-type="conference">
+								<a href="https://www.dbpia.co.kr/Journal/articleDetail?nodeId=NODE11527339" target="_blank">
+									<span class="text-primary">"2단계 자율주행 중 시각 및 청각 이차 과제 수행이 제어권 전환 능력에 미치는 영향"</span>
+								</a>
+								<span style="float:right;">
+									<a class="btn btn-outline-info btn-sm" href="#" role="button" target="_blank">PDF</a>
+								</span>
+								<br>
+								<em>한국HCI학회 논문지 2023 Volume 18 (Sep 2023).  한국HCI학회</em><br>
+								황지우, <strong>김아욱 +</strong>.
+							</td>
+						</tr>
+						<tr>
+							<td class="publication" paper-type="journal">
+								<a href="https://www.nature.com/articles/s41597-023-02248-2" target="_blank">
+									<span class="text-primary">"K-EmoPhone: A Mobile and Wearable Dataset with In-Situ Emotion, Stress, and Attention Labels"</span>
+								</a>
+								<span style="float:right;">
+									<a class="btn btn-outline-info btn-sm" href="./file/paper/scientfic23KEmoPhone.pdf" role="button" target="_blank">PDF</a>
+								</span>
+								<br>
+								<em>Scientific Data, volume 10, 1 (Jun 2023).  Nature </em><br>
+								Soowon Kang, Woohyeok Choi, Cheul Young Park, Narae Cha, <strong>Auk Kim</strong>, Ahsan Habib Khandoker, Leontios Hadjileontiadis, Heepyung Kim, Yong Jeong, Uichin Lee +.
+							</td>
+						</tr>
+						<tr>
+							<td class="publication" paper-type="journal">
+								<a href="https://www.mdpi.com/2079-9292/12/8/1906" target="_blank">
+									<span class="text-primary">"Endpoint Device Risk-Scoring Algorithm Proposal for Zero Trust"</span>
+								</a>
+								<span style="float:right;">
+									<a class="btn btn-outline-info btn-sm" href="./file/paper/electronics23_ZeroTrust.pdf" role="button" target="_blank">PDF</a>
+								</span>
+								<br>
+								<em>Electronics, volume 12, 8 (Apr 2023) </em><br>
+								Ui Hyun Park,Jeong-hyeop Hong, <strong>Auk Kim +</strong>, Kyung Ho Son +.
+							</td>
+						</tr>
+					</tbody>
+				</table>
+
 				<br>
 
 				<h5>2022</h5>
