--- a/index.html
+++ b/index.html
@@ -130,7 +130,7 @@
 									<span class="text-primary">"Interrupting for Microlearning: Understanding Perceptions and Interruptibility of Proactive Conversational Microlearning Services"</span>
 								</a>
 								<span style="float:right;">
-									<a class="btn btn-outline-info btn-sm" href="#" role="button" target="_blank">PDF</a>
+									<a class="btn btn-outline-info btn-sm" href="./file/paper/CHI24Microlearning.pdf" role="button" target="_blank">PDF</a>
 								</span>
 								<br>
 								<em>Proceedings of the SIGCHI Conference on Human Factors in Computing Systems (CHI ’24) (conditionally accepted)</em><br>
@@ -143,7 +143,7 @@
 									<span class="text-primary">"S-ADL: Exploring Smartphone-based Activities of Daily Living to Detect Blood Alcohol Concentration in a Controlled Environment"</span>
 								</a>
 								<span style="float:right;">
-									<a class="btn btn-outline-info btn-sm" href="#" role="button" target="_blank">PDF</a>
+									<a class="btn btn-outline-info btn-sm" href="./file/paper/CHI24SADL.pdf" role="button" target="_blank">PDF</a>
 								</span>
 								<br>
 								<em>Proceedings of the SIGCHI Conference on Human Factors in Computing Systems (CHI ’24) (conditionally accepted)</em><br>
@@ -156,7 +156,7 @@
 									<span class="text-primary">"Exploring Context-Aware Mental Health Self-Tracking Using Multimodal Smart Speakers in Home Environments"</span>
 								</a>
 								<span style="float:right;">
-									<a class="btn btn-outline-info btn-sm" href="#" role="button" target="_blank">PDF</a>
+									<a class="btn btn-outline-info btn-sm" href="./file/paper/CHI24Multimodal.pdf" role="button" target="_blank">PDF</a>
 								</span>
 								<br>
 								<em>Proceedings of the SIGCHI Conference on Human Factors in Computing Systems (CHI ’24) (conditionally accepted)</em><br>
