--- a/index.html
+++ b/index.html
@@ -172,7 +172,7 @@
 				<table class="table table-hover">
 					<tbody>					
 						<tr>
-							<td class="publication" paper-type="conference">
+							<td class="publication" paper-type="journal">
 								<a href="https://www.dbpia.co.kr/Journal/articleDetail?nodeId=NODE11527339" target="_blank">
 									<span class="text-primary">"2단계 자율주행 중 시각 및 청각 이차 과제 수행이 제어권 전환 능력에 미치는 영향"</span>
 								</a>
