--- a/index.html
+++ b/index.html
@@ -126,40 +126,40 @@
 						</tr>
 						<tr>
 							<td class="publication" paper-type="conference">
-								<a href="#" target="_blank">
+								<a href="https://doi.org/10.1145/3613904.3642778" target="_blank">
 									<span class="text-primary">"Interrupting for Microlearning: Understanding Perceptions and Interruptibility of Proactive Conversational Microlearning Services"</span>
 								</a>
 								<span style="float:right;">
 									<a class="btn btn-outline-info btn-sm" href="./file/paper/CHI24Microlearning.pdf" role="button" target="_blank">PDF</a>
 								</span>
 								<br>
-								<em>Proceedings of the SIGCHI Conference on Human Factors in Computing Systems (CHI ’24) (conditionally accepted)</em><br>
+								<em>Proceedings of the SIGCHI Conference on Human Factors in Computing Systems (CHI ’24)</em><br>
 								Minyeong Kim *, Jiwook Lee *, Youngji Koh, Chanhee Lee, Uichin Lee +, <strong>Auk Kim +</strong>. (* Equally contributed)
 							</td>
 						</tr>	
 						<tr>
 							<td class="publication" paper-type="conference">
-								<a href="#" target="_blank">
+								<a href="https://doi.org/10.1145/3613904.3642832" target="_blank">
 									<span class="text-primary">"S-ADL: Exploring Smartphone-based Activities of Daily Living to Detect Blood Alcohol Concentration in a Controlled Environment"</span>
 								</a>
 								<span style="float:right;">
 									<a class="btn btn-outline-info btn-sm" href="./file/paper/CHI24SADL.pdf" role="button" target="_blank">PDF</a>
 								</span>
 								<br>
-								<em>Proceedings of the SIGCHI Conference on Human Factors in Computing Systems (CHI ’24) (conditionally accepted)</em><br>
+								<em>Proceedings of the SIGCHI Conference on Human Factors in Computing Systems (CHI ’24)</em><br>
 								Hansoo Lee, <strong>Auk Kim +</strong>, Sang Won Bae, Uichin Lee +.
 							</td>
 						</tr>				
 						<tr>
 							<td class="publication" paper-type="conference">
-								<a href="#" target="_blank">
+								<a href="https://doi.org/10.1145/3613904.3642846" target="_blank">
 									<span class="text-primary">"Exploring Context-Aware Mental Health Self-Tracking Using Multimodal Smart Speakers in Home Environments"</span>
 								</a>
 								<span style="float:right;">
 									<a class="btn btn-outline-info btn-sm" href="./file/paper/CHI24Multimodal.pdf" role="button" target="_blank">PDF</a>
 								</span>
 								<br>
-								<em>Proceedings of the SIGCHI Conference on Human Factors in Computing Systems (CHI ’24) (conditionally accepted)</em><br>
+								<em>Proceedings of the SIGCHI Conference on Human Factors in Computing Systems (CHI ’24)</em><br>
 								Jieun Lim *, Youngji Ko * , <strong>Auk Kim +</strong>, Uichin Lee +. (* Equally contributed)
 							</td>
 						</tr>
