--- a/index.html
+++ b/index.html
@@ -147,7 +147,7 @@
 								</span>
 								<br>
 								<em>Proceedings of the SIGCHI Conference on Human Factors in Computing Systems (CHI ’24)</em><br>
-								Hansoo Lee, <strong>Auk Kim +</strong>, Sang Won Bae, Uichin Lee +.
+								Hansoo Lee, <strong>Auk Kim +</strong>, Sang Won Bae, Uichin Lee +. (Best Paper Honorable Mention Award)
 							</td>
 						</tr>				
 						<tr>
