--- a/index.html
+++ b/index.html
@@ -113,14 +113,14 @@
 					<tbody>
 						<tr>
 							<td class="publication" paper-type="journal">
-								<a href="#" target="_blank">
+								<a href="https://tvst.arvojournals.org/article.aspx?articleid=2793685#247703055" target="_blank">
 									<span class="text-primary">"Internet-of-Things-Enabled Patch with Built-in Microsensors and Wireless Chip: Real-time Remote Monitoring of Patch Treatment"</span>
 								</a>
 								<span style="float:right;">
-									<a class="btn btn-outline-info btn-sm" href="#" role="button" target="_blank">PDF</a>
+									<a class="btn btn-outline-info btn-sm" href="./file/paper/TVST2024.pdf" role="button" target="_blank">PDF</a>
 								</span>
 								<br>
-								<em>Translational Vision Science and Technology (conditionally accepted)</em><br>
+								<em>Translational Vision Science and Technology</em><br>
 								Kyu-Seong Jo *, Jiwoo Hwang *, Min-Seo Kim, Sunghwan Choi, Jungmin Lee, Seongho Lee, <strong>Auk Kim +</strong>, Yung-Ju Yoo +. (* Equally contributed)
 							</td>
 						</tr>
