--- a/index.html
+++ b/index.html
@@ -104,8 +104,8 @@
 					</ul>
 				</nav>
 
-				<br>
-				<p>Corresponding Author +</p>
+		
+				<p>Equally contributed *, Corresponding Author +</p>
 				<br>
 
 				<h5>2024</h5>
@@ -121,7 +121,7 @@
 								</span>
 								<br>
 								<em>Translational Vision Science and Technology</em><br>
-								Kyu-Seong Jo *, Jiwoo Hwang *, Min-Seo Kim, Sunghwan Choi, Jungmin Lee, Seongho Lee, <strong>Auk Kim +</strong>, Yung-Ju Yoo +. (* Equally contributed)
+								Kyu-Seong Jo *, Jiwoo Hwang *, Min-Seo Kim, Sunghwan Choi, Jungmin Lee, Seongho Lee, <strong>Auk Kim +</strong>, Yung-Ju Yoo +.
 							</td>
 						</tr>
 						<tr>
@@ -134,7 +134,7 @@
 								</span>
 								<br>
 								<em>Proceedings of the SIGCHI Conference on Human Factors in Computing Systems (CHI ’24)</em><br>
-								Minyeong Kim *, Jiwook Lee *, Youngji Koh, Chanhee Lee, Uichin Lee +, <strong>Auk Kim +</strong>. (* Equally contributed)
+								Minyeong Kim *, Jiwook Lee *, Youngji Koh, Chanhee Lee, Uichin Lee +, <strong>Auk Kim +</strong>.
 							</td>
 						</tr>	
 						<tr>
@@ -160,7 +160,7 @@
 								</span>
 								<br>
 								<em>Proceedings of the SIGCHI Conference on Human Factors in Computing Systems (CHI ’24)</em><br>
-								Jieun Lim *, Youngji Ko * , <strong>Auk Kim +</strong>, Uichin Lee +. (* Equally contributed)
+								Jieun Lim *, Youngji Ko * , <strong>Auk Kim +</strong>, Uichin Lee +.
 							</td>
 						</tr>
 					</tbody>
