--- a/private_calendar.html
+++ b/private_calendar.html
@@ -38,11 +38,11 @@
 
 
 <div class="container">
-    <p>Public address in iCal format: https://calendar.google.com/calendar/ical/kimauk%40gmail.com/public/basic.ics</p>
+
     <div class="bs-docs-section">
         <div class="menu_template" id="menu_calendar">
             <div class="row">
-                <iframe src="https://calendar.google.com/calendar/embed?height=600&amp;wkst=1&amp;bgcolor=%23ffffff&amp;ctz=Asia%2FSeoul&amp;showTitle=0&amp;mode=WEEK&amp;src=a2ltYXVrQGdtYWlsLmNvbQ&amp;src=bHRtMGpybHNhbXY4bWxocmcwYnBjZ3U2cHNAZ3JvdXAuY2FsZW5kYXIuZ29vZ2xlLmNvbQ&amp;src=a28uc291dGhfa29yZWEjaG9saWRheUBncm91cC52LmNhbGVuZGFyLmdvb2dsZS5jb20&amp;color=%23cc003c&amp;color=%23F4511E&amp;color=%23009688" style="width: 100%;border:solid 1px #777" width="800" height="700" frameborder="0" scrolling="no"></iframe>    
+                <iframe src="https://calendar.google.com/calendar/embed?height=600&wkst=2&ctz=Asia%2FSeoul&bgcolor=%23ffffff&mode=WEEK&src=a2ltYXVrQGdtYWlsLmNvbQ&src=Z2tzMGlvYWExY2RzNHJybWlvNjd2amJwN2tAZ3JvdXAuY2FsZW5kYXIuZ29vZ2xlLmNvbQ&src=bHRtMGpybHNhbXY4bWxocmcwYnBjZ3U2cHNAZ3JvdXAuY2FsZW5kYXIuZ29vZ2xlLmNvbQ&src=a28uc291dGhfa29yZWEjaG9saWRheUBncm91cC52LmNhbGVuZGFyLmdvb2dsZS5jb20&color=%23D50000&color=%234285F4&color=%23F4511E&color=%23009688" style="width: 100%;border:solid 1px #777"  width="800" height="700" frameborder="0" scrolling="no"></iframe>    
             </div>
         </div>
         <!-- End of menu_home -->
