--- a/index.html
+++ b/index.html
@@ -121,19 +121,15 @@
 					<tbody>
 						<tr>
 							<td class="publication" paper-type="journal">
-								<a href="https://tvst.arvojournals.org/article.aspx?articleid=2793685#247703055"
+								<a href="https://doi.org/10.1016/j.ijhcs.2024.103401"
 									target="_blank">
-									<span class="text-primary">"Internet-of-Things-Enabled Patch with Built-in
-										Microsensors and Wireless Chip: Real-time Remote Monitoring of Patch
-										Treatment"</span>
+									<span class="text-primary">"Effects of In-vehicle Auditory Interactions on Takeover Performance in SAE L2 Semi-automated Vehicles"</span>
 								</a>
-
 								<br>
-								<p><em>Translational Vision Science and Technology</em><br>
-									Kyu-Seong Jo *, Jiwoo Hwang *, Min-Seo Kim, Sunghwan Choi, Jungmin Lee, Seongho Lee,
-									<strong>Auk Kim +</strong>, Yung-Ju Yoo +.
+								<p><em>International Journal of Human-Computer Studies (Accepted in Nov 2024; Online Pre-Published) (SCIE & SSCI, <strong>JCR 7%</strong>)</em><br>
+									Jiwoo Hwang, Woohyeok Choi +, <strong>Auk Kim +</strong>.
 								</p>
-								<span pdf="./file/paper/TVST2024.pdf"></span>
+								<span pdf=""></span>
 							</td>
 						</tr>
 						<tr>
@@ -145,7 +141,7 @@
 								</a>
 								<br>
 								<p><em>Proceedings of the SIGCHI Conference on Human Factors in Computing Systems (CHI
-										’24)</em><br>
+										’24) (<strong>CS Top Conference</strong>)</em><br>
 									Minyeong Kim *, Jiwook Lee *, Youngji Koh, Chanhee Lee, Uichin Lee +, <strong>Auk
 										Kim +</strong>.</p>
 								<span pdf="./file/paper/CHI24Microlearning.pdf"
@@ -160,7 +156,7 @@
 								</a>
 								<br>
 								<p><em>Proceedings of the SIGCHI Conference on Human Factors in Computing Systems (CHI
-										’24)</em><br>
+										’24) (<strong>CS Top Conference</strong>)</em><br>
 									Hansoo Lee, <strong>Auk Kim +</strong>, Sang Won Bae, Uichin Lee +. (Best Paper
 									Honorable Mention Award)</p>
 								<span pdf="./file/paper/CHI24SADL.pdf" video="https://www.youtube.com/watch?v=X4jMDuCoaOA"></span>
@@ -174,11 +170,29 @@
 								</a>
 								<br>
 								<p><em>Proceedings of the SIGCHI Conference on Human Factors in Computing Systems (CHI
-										’24)</em><br>
+										’24) (<strong>CS Top Conference</strong>)</em><br>
 									Jieun Lim *, Youngji Ko * , <strong>Auk Kim +</strong>, Uichin Lee +.</p>
 								<span pdf="./file/paper/CHI24Multimodal.pdf" video="https://www.youtube.com/watch?v=GqpiW3gaO4s"></span>
 							</td>
 						</tr>
+						<tr>
+							<td class="publication" paper-type="journal">
+								<a href="https://tvst.arvojournals.org/article.aspx?articleid=2793685#247703055"
+									target="_blank">
+									<span class="text-primary">"Internet-of-Things-Enabled Patch with Built-in
+										Microsensors and Wireless Chip: Real-time Remote Monitoring of Patch
+										Treatment"</span>
+								</a>
+
+								<br>
+								<p><em>Translational Vision Science and Technology, Volume 13, Issue 5 (May 2024). Pediatric Ophthalmology & Strabismus (SCIE)</em><br>
+									Kyu-Seong Jo *, Jiwoo Hwang *, Min-Seo Kim, Sunghwan Choi, Jungmin Lee, Seongho Lee,
+									<strong>Auk Kim +</strong>, Yung-Ju Yoo +.
+								</p>
+								<span pdf="./file/paper/TVST2024.pdf"></span>
+							</td>
+						</tr>
+						
 					</tbody>
 				</table>
 
@@ -207,7 +221,7 @@
 										Emotion, Stress, and Attention Labels"</span>
 								</a>
 								<br>
-								<p><em>Scientific Data, volume 10, 1 (Jun 2023). Nature </em><br>
+								<p><em>Scientific Data, volume 10, 1 (Jun 2023). Nature (SCIE)</em><br>
 									Soowon Kang, Woohyeok Choi, Cheul Young Park, Narae Cha, <strong>Auk Kim</strong>,
 									Ahsan Habib Khandoker, Leontios Hadjileontiadis, Heepyung Kim, Yong Jeong, Uichin
 									Lee +.
@@ -222,7 +236,7 @@
 										Trust"</span>
 								</a>
 								<br>
-								<p><em>Electronics, volume 12, 8 (Apr 2023) </em><br>
+								<p><em>Electronics, volume 12, 8 (Apr 2023) (SCIE)</em><br>
 									Ui Hyun Park,Jeong-hyeop Hong, <strong>Auk Kim +</strong>, Kyung Ho Son +.</p>
 								<span pdf="./file/paper/electronics23_ZeroTrust.pdf"></span>
 
@@ -264,7 +278,7 @@
 									<span class="text-primary">"Understanding Emotion Changes in Mobile Experience Sampling"</span></a>
 								<br>
 								<p><em>Proceedings of the SIGCHI Conference on Human Factors in Computing Systems (CHI
-										’22)</em><br>
+										’22) (<strong>CS Top Conference</strong>)</em><br>
 									Soowon Kang, Cheul Young Park, Narae Cha, <strong>Auk Kim +</strong>, Uichin Lee +.
 								</p>
 								<span pdf="./file/paper/CHI22_ESM.pdf" video="https://www.youtube.com/watch?v=CCw1uEOuhZM"></span>
@@ -285,7 +299,7 @@
 									<span class="text-primary">"Benefits of Mobile Contact Tracing on COVID-19: Tracing
 										Capacity Perspectives"</span></a>
 								<br>
-								<p><em>Frontiers in Public Health (Digital Public Health Section) (Mar 2021)</em><br>
+								<p><em>Frontiers in Public Health (Digital Public Health Section) (Mar 2021) (SCIE)</em><br>
 									Uichin Lee +, <strong>Auk Kim</strong>.</p>
 								<span pdf="./file/paper/frontiers21_covid19.pdf"></span>
 
@@ -298,7 +312,7 @@
 								</a>
 								<br>
 								<p><em>Proceedings of the SIGCHI Conference on Human Factors in Computing Systems (CHI
-										’21)</em><br>
+										’21) (<strong>CS Top Conference</strong>)</em><br>
 									Hyunsoo Lee, <strong>Auk Kim +</strong>, Hwajung Hong +, Uichin Lee +.</p>
 								<span pdf="./file/paper/CHI21_commitments.pdf" video="https://www.youtube.com/watch?v=mSCXgOceCpA"></span>
 							</td>
@@ -318,7 +332,7 @@
 										emotion recognition in naturalistic conversations."</span></a>
 								<br>
 								<p>
-									<em>Scientific Data, volume 7, 293 (Sep 2020). Nature</em><br>
+									<em>Scientific Data, volume 7, 293 (Sep 2020). Nature (SCIE)</em><br>
 									Cheul Young Park, Narae Cha, Soowon Kang, <strong>Auk Kim</strong>, Ahsan Habib
 									Khandoker, Leontios Hadjileontiadis, Alice Oh, Yong Jeong, and Uichin Lee +.
 								</p>
@@ -332,7 +346,7 @@
 										Moments for Proactive Interactions with Smart Speakers."</span></a>
 								<br>
 								<p>
-									<em>Proceedings of the ACM on Interactive, Mobile, Wearable and Ubiquitous Technologies (IMWUT/Ubicomp), Volume 4, Issue 3 (Sep 2020). ACM</em><br>
+									<em>Proceedings of the ACM on Interactive, Mobile, Wearable and Ubiquitous Technologies (IMWUT/Ubicomp), Volume 4, Issue 3 (Sep 2020). ACM (<strong>CS Top Conference</strong>)</em><br>
 									Narae Cha, <strong>Auk Kim +</strong>, Cheul Young Park, Soowon Kang, Minkyu Park,
 									Jae-Gil Lee, Sangsu Lee, and Uichin Lee +.
 								</p>
@@ -361,7 +375,7 @@
 										Trace Data Disclosure on People With COVID-19 in South Korea."</span></a>
 								<br>
 								<p>
-									<em>Frontier Public Health, Volume 8 (Jun 2020). Frontier</em><br>
+									<em>Frontier Public Health, Volume 8 (Jun 2020). Frontier (SCIE)</em><br>
 									Gyuwon Jung, Hyunsoo Lee, <strong>Auk Kim +</strong>, Uichin Lee +.
 								</p>
 								<span pdf="./file/paper/FontierPublicHealth20_privacy.pdf"></span>
@@ -375,7 +389,7 @@
 								<br>
 								<p>
 									<em>Proceedings of the ACM on Interactive, Mobile, Wearable and Ubiquitous
-										Technologies (IMWUT/Ubicomp), Volume 4, Issue 1 (Mar 2020). ACM</em><br>
+										Technologies (IMWUT/Ubicomp), Volume 4, Issue 1 (Mar 2020). ACM (<strong>CS Top Conference</strong>)</em><br>
 									<strong>Auk Kim</strong>, Jungmi Park, Uichin Lee +.
 								</p>
 								<span pdf="./file/paper/IMWUT20_Interruptibility.pdf" video="https://www.youtube.com/watch?v=5qufUKQC8_g"></span>
@@ -426,7 +440,7 @@
 										completion contingent reward for game-based learning."</span></a>
 								<br>
 								<p>
-									<em>Computers & Education, Volume 139, 1-15 (Oct 2019). Pergamon</em><br>
+									<em>Computers & Education, Volume 139, 1-15 (Oct 2019). Pergamon (SCIE & SSCI; <strong>JCR 1%</strong>)</em><br>
 									Juneyoung Park, Seunghyun Kim, <strong>Auk Kim</strong>, Mun Y. Yi +.
 								</p>
 								<span pdf="./file/paper/ComEdu19_Learning.pdf"></span>
@@ -462,7 +476,7 @@
 								<br>
 								<p>
 									<em>Proceedings of the ACM on Interactive, Mobile, Wearable and Ubiquitous
-										Technologies (IMWUT/Ubicomp), Volume 2, Issue 4 (Dec 2018). ACM</em><br>
+										Technologies (IMWUT/Ubicomp), Volume 2, Issue 4 (Dec 2018). ACM (<strong>CS Top Conference</strong>)</em><br>
 									<strong>Auk Kim</strong>, Woohyeok Choi, Jungmi Park, Kyeyoon Kim, Uichin Lee +.
 								</p>
 								<span pdf="./file/paper/IMWUT18_Interruptibility.pdf"></span>
@@ -512,7 +526,7 @@
 								<br>
 								<p>
 									<em>Proceedings of the SIGCHI Conference on Human Factors in Computing Systems (CHI
-										’17)</em><br>
+										’17) (<strong>CS Top Conference</strong>)</em><br>
 									<strong>Auk Kim</strong>, Sungjoon Kang, Uichin Lee +.
 								</p>
 								<span pdf="./file/paper/CHI17_LetsPic.pdf"></span>
@@ -564,7 +578,7 @@
 										preference."</span></a>
 								<br>
 								<p>
-									<em>Computers in Human Behavior, Volume 62, 666-675 (Sep 2016). Elsevier</em><br>
+									<em>Computers in Human Behavior, Volume 62, 666-675 (Sep 2016). Elsevier (SSCI; <strong>JCR 4%</strong>)</em><br>
 									<strong>Auk Kim</strong>, Gahgene Gweon +.
 								</p>
 								<span pdf="./file/paper/CnHM16_PhotoSharing.pdf"></span>
@@ -587,7 +601,7 @@
 								<br>
 								<p>
 									<em>Proceedings of the SIGCHI Conference on Human Factors in Computing Systems (CHI
-										’14)</em><br>
+										’14) (<strong>CS Top Conference</strong>)</em><br>
 									<strong>Auk Kim</strong>, Gahgene Gweon +.
 								</p>
 								<span pdf="./file/paper/CHI14_PhotoSharing.pdf"></span>
