--- a/index.html
+++ b/index.html
@@ -183,7 +183,6 @@
 										Microsensors and Wireless Chip: Real-time Remote Monitoring of Patch
 										Treatment"</span>
 								</a>
-
 								<br>
 								<p><em>Translational Vision Science and Technology, Volume 13, Issue 5 (May 2024). Pediatric Ophthalmology & Strabismus (SCIE)</em><br>
 									Kyu-Seong Jo *, Jiwoo Hwang *, Min-Seo Kim, Sunghwan Choi, Jungmin Lee, Seongho Lee,
@@ -210,7 +209,7 @@
 								<br>
 								<p><em>한국HCI학회 논문지 2023 Volume 18 (Sep 2023). 한국HCI학회</em><br>
 									황지우, <strong>김아욱 +</strong>.</p>
-								<span pdf="#"></span>
+								<span pdf="./file/paper/HCIK23_smartCar.pdf"></span>
 								</p>
 							</td>
 						</tr>
@@ -252,24 +251,24 @@
 					<tbody>
 						<tr>
 							<td class="publication" paper-type="conference">
-								<a href="#" target="_blank">
+								<a href="https://www.dbpia.co.kr/Journal/articleDetail?nodeId=NODE11043828" target="_blank">
 									<span class="text-primary">"음성 운전 보조 에이전트 개발을 위한 디자인 요구사항 조사 (A Survey on Design for
 										Development of Voice Driving Assistance Agent)"</span></a>
 								<br>
 								<p><em>PROCEEDINGS OF HCI KOREA 2022 학술대회 발표 논문집, 283-288 (HCIK 2022)</em><br>
 									김민지, 한민규, 황지우, <strong>김아욱 +</strong>.
 								</p>
-								<span pdf="#"></span>
+								<span pdf="./file/paper/HCIK22_intelligentVehicleAgent.pdf"></span>
 							</td>
 						</tr>
 						<tr>
 							<td class="publication" paper-type="conference">
-								<a href="#" target="_blank"><span class="text-primary">"저비용 조건부 자율주행 시뮬레이터 개발 및 평가
+								<a href="https://www.dbpia.co.kr/journal/articleDetail?nodeId=NODE11043827" target="_blank"><span class="text-primary">"저비용 조건부 자율주행 시뮬레이터 개발 및 평가
 										(Developing and Evaluating Low-Cost Level 3 Vehicle Simulator)"</span></a>
 								<br>
 								<p><em>PROCEEDINGS OF HCI KOREA 2022 학술대회 발표 논문집, 283-288 (HCIK 2022)</em><br>
 									황지우, 한민규, 김민지, <strong>김아욱 +</strong>.</p>
-								<span pdf="#"></span>
+								<span pdf="./file/paper/HCIK22_simulater.pdf"></span>
 							</td>
 						</tr>
 						<tr>
@@ -336,7 +335,7 @@
 									Cheul Young Park, Narae Cha, Soowon Kang, <strong>Auk Kim</strong>, Ahsan Habib
 									Khandoker, Leontios Hadjileontiadis, Alice Oh, Yong Jeong, and Uichin Lee +.
 								</p>
-								<span pdf="https://arxiv.org/pdf/2005.04120.pdf"></span>
+								<span pdf="./file/paper/scientific20_K_Emocon.pdf"></span>
 							</td>
 						</tr>
 						<tr>
@@ -406,7 +405,7 @@
 									<em>PROCEEDINGS OF HCI KOREA 2020 학술대회 발표 논문집, 898-902 (HCIK 2020)</em><br>
 									차나래, <strong>김아욱</strong>, 박철영, 박민규, 강수원, 이의진+.
 								</p>
-								<span pdf="https://www.dbpia.co.kr/journal/articleDetail?nodeId=NODE10402874""></span>
+								<span pdf="./file/paper/HCIK20_smartSpeaker.pdf""></span>
 							</td>
 						</tr>
 						<tr>
@@ -421,7 +420,7 @@
 										강수원, 차나래, 박철영, <strong>김아욱</strong>, 이의진+.
 									</p>
 									<span
-										pdf="https://www.dbpia.co.kr/journal/articleDetail?nodeId=NODE10402723f"></span>
+										pdf="./file/paper/HCIK20_ESM.pdf"></span>
 							</td>
 						</tr>
 					</tbody>
