--- a/index.html
+++ b/index.html
@@ -129,7 +129,7 @@
 								<p><em>International Journal of Human-Computer Studies (Accepted in Nov 2024; Online Pre-Published) (SCIE & SSCI, <strong>JCR 7%</strong>)</em><br>
 									Jiwoo Hwang, Woohyeok Choi +, <strong>Auk Kim +</strong>.
 								</p>
-								<span pdf=""></span>
+								<span pdf="./file/paper/IJHCS_smartCar.pdf"></span>
 							</td>
 						</tr>
 						<tr>
