--- a/index.html
+++ b/index.html
@@ -115,10 +115,22 @@
 
 				<p>Equally contributed *, Corresponding Author +</p>
 				<br>
-
-				<h5>2024</h5>
+				<h5>2025</h5>
 				<table class="table table-hover">
 					<tbody>
+						<tr>
+							<td class="publication" paper-type="journal">
+								<a href="https://doi.org/10.1038/s41597-025-04781-8"
+									target="_blank">
+									<span class="text-primary">"A Dataset on Takeover during Distracted L2 Automated Driving"</span>
+								</a>
+								<br>
+								<p><em>Scientific Data, Volume 12, 539 (Mar 2025). Nature (SCIE)</em><br>
+									Jiwoo Hwang, Woohyeok Choi, Jungmin Lee, Woojoo Kim, Jungwook Rhim, <strong>Auk Kim +</strong>.
+								</p>
+								<span pdf="./file/paper/ScientificData25_smartCar.pdf"></span>
+							</td>
+						</tr>
 						<tr>
 							<td class="publication" paper-type="journal">
 								<a href="https://doi.org/10.1016/j.ijhcs.2024.103401"
@@ -126,12 +138,19 @@
 									<span class="text-primary">"Effects of In-vehicle Auditory Interactions on Takeover Performance in SAE L2 Semi-automated Vehicles"</span>
 								</a>
 								<br>
-								<p><em>International Journal of Human-Computer Studies (Accepted in Nov 2024; Online Pre-Published) (SCIE & SSCI, <strong>JCR 7%</strong>)</em><br>
+								<p><em>International Journal of Human-Computer Studies, Volume 196 (Feb 2025). Elsevier (SCIE & SSCI, <strong>JCR 7%</strong>)</em><br>
 									Jiwoo Hwang, Woohyeok Choi +, <strong>Auk Kim +</strong>.
 								</p>
 								<span pdf="./file/paper/IJHCS_smartCar.pdf"></span>
 							</td>
-						</tr>
+						</tr>		
+					</tbody>
+				</table>
+
+				<br>
+				<h5>2024</h5>
+				<table class="table table-hover">
+					<tbody>
 						<tr>
 							<td class="publication" paper-type="conference">
 								<a href="https://doi.org/10.1145/3613904.3642778" target="_blank">
