--- a/calendar.html
+++ b/calendar.html
@@ -42,7 +42,7 @@
     <div class="bs-docs-section">
         <div class="menu_template" id="menu_calendar">
             <div class="row">
-                <iframe src="https://calendar.google.com/calendar/embed?height=600&amp;wkst=1&amp;bgcolor=%23ffffff&amp;ctz=Asia%2FSeoul&amp;showTitle=0&amp;mode=WEEK&amp;src=a2ltYXVrQGdtYWlsLmNvbQ&amp;src=bHRtMGpybHNhbXY4bWxocmcwYnBjZ3U2cHNAZ3JvdXAuY2FsZW5kYXIuZ29vZ2xlLmNvbQ&amp;src=a28uc291dGhfa29yZWEjaG9saWRheUBncm91cC52LmNhbGVuZGFyLmdvb2dsZS5jb20&amp;color=%23cc003c&amp;color=%23F4511E&amp;color=%23009688" style="width: 100%;border:solid 1px #777" width="800" height="700" frameborder="0" scrolling="no"></iframe>    
+                <iframe src="https://calendar.google.com/calendar/embed?height=700&wkst=1&ctz=Asia%2FSeoul&mode=WEEK&src=a2ltYXVrQGdtYWlsLmNvbQ&src=ZmFmNGQ0MzcwMGZjMzk5OGEzZjg0Y2ZlYjY0YzcxNzZlZTc0NjhkOTYwMWE2MGIwZTI4ZTU1ODYxZmI1M2E1OEBncm91cC5jYWxlbmRhci5nb29nbGUuY29t&color=%23d50000&color=%23b39ddb" style="border:solid 1px #777" width="1200" height="700" frameborder="0" scrolling="no"></iframe>    
             </div>
         </div>
         <!-- End of menu_home -->
